--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
     }
   </style>
   <script type="module">
-    fetch('https://peliculas-4v49.onrender.com//movies')
+    fetch('https://peliculas-4v49.onrender.com/movies')
       .then(res => res.json())
       .then(movies => {
         const html = movies.map(movie => {
