--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
             <p><strong>Year:</strong> ${movie.year}</p>
             <p><strong>Director:</strong> ${movie.director}</p>
             <p><strong>Duration:</strong> ${movie.duration} min</p>
-            <p><strong>Genres:</strong> ${movie?.genre ?? "N/A"}</p>
+          <p><strong>Genres:</strong> ${movie.genre ? movie.genre.join(', ') : "N/A"}</p>
             <button class="delete-button">Eliminar</button>
             <button class="edit-button">Modificar</button>
           </article>
